force-app/main/default/objects/NSSales_MarketingManagerAssignmentLog__c/NSSales_MarketingManagerAssignmentLog__c.object-meta.xml
<CustomObject>
    <description>This object captures the history of Marketing Manager Assignment object</description>
    <label>Marketing Manager Assignment Log</label>
    <nameField>
        <displayFormat>MMLog-{0}</displayFormat>
        <label>Marketing Manager Assignment Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Manager Assignment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>