force-app/main/default/objects/NSSales_MarketingManagerAssignmentLog__c/fields/NSSales_Account__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It stores the account name of the record</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Manager Assignment Logs</relationshipLabel>
    <relationshipName>Marketing_Manager_Assignment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>