force-app/main/default/objects/NSSales_MarketingManagerAssignmentLog__c/fields/NSSales_Action__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Action__c</fullName>
    <description>It stores the action(create/edit/delete) taken on any record</description>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>