force-app/main/default/objects/NSSales_MarketingManagerAssignmentLog__c/fields/NSSales_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>NSSales_BusinessUnit__c</fullName>
    <description>It stores the related marketing manager&#39;s Business Unit</description>
    <label>Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>