force-app/main/default/objects/NSSales_MarketingManagerAssignmentLog__c/fields/NSSales_ChangeDate__c.field-meta.xml
<CustomField>
    <fullName>NSSales_ChangeDate__c</fullName>
    <description>It captures the create date/change date of the record</description>
    <label>Change Date</label>
    <type>Date</type>
</CustomField>