force-app/main/default/objects/NSSales_MarketingManagerAssignmentLog__c/fields/NSSales_MarketingManager__c.field-meta.xml
<CustomField>
    <fullName>NSSales_MarketingManager__c</fullName>
    <description>It stores the Marketing Manager user name of the record</description>
    <label>Marketing Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>