force-app/main/default/objects/NSSales_MarketingManagerAssignmentLog__c/fields/NSSales_NewValue__c.field-meta.xml
<CustomField>
    <fullName>NSSales_NewValue__c</fullName>
    <description>It stores the new value of any changed record</description>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>