force-app/main/default/objects/NSSales_MarketingManagerAssignmentLog__c/fields/NSSales_OldValue__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OldValue__c</fullName>
    <description>It stores the old value of any changed record</description>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>