force-app/main/default/objects/NSSales_MarketingManagerAssignmentLog__c/fields/NSSales_Role__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Role__c</fullName>
    <description>It stores the role of the Marketing Manager</description>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>